--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" href="css/style.css">
+<link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
     <header >
         <div class="head flex">
-    <img src="./img/to-do.png"  class ="logo"alt="logo">
+    <img src="./to-do.png"  class ="logo"alt="logo">
     <p class="menu">About Us</p>
 </div>
     </header>
